# technical-analysis-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  watchlist.csv
.streamlit/: config.toml
src/: __init__.py  ai_analyzer.py  alert_checker.py  app.py  backtest.py  charts.py  data.py  indicators.py  main.py  notifier.py  order_info.py  scheduler.py  signals.py  watchlist_manager.py
src/fundamental/: __init__.py  charts.py  client.py  config.py  metrics.py  models.py  parser.py  transformer.py
src/pages/: 1_technical_analysis.py  2_alert_settings.py
